--- a/Research Website/authors.html
+++ b/Research Website/authors.html
@@ -42,48 +42,28 @@
     <section class="author">
         <div class="container">
             <br>
-            <h1 class="text-center about-author">About the Author</h1>
+            <h1 class="text-center about-author">About the Authors</h1>
             <hr><br> <!--Horizontal line and line break-->
 
             <!--Cards Organized in a 2x2 grid-->
             <div class="row row-cols-1 row-cols-md-2 g-4">
                 <div class="col">
                     <div class="card" id="about">
-                        <img src="" class="card-img-top" alt="Photo of Julian Sanchez">
+                        <img src="./img/julian-sanchez.jpg" class="card-img-top" alt="Photo of Julian Sanchez">
                         <div class="card-body">
                             <h4 class="card-title">Julian Sanchez</h4>
                             <h5>Class: Research Practicum</h5>
-                            <p class="card-text">Description of Contributions here.</p>
+                            <p class="card-text">Built prototypes, executed tests, purchased materials, collected data, wrote research paper, and wrote/preseented the presentation.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card" id="about">
-                        <img src="" class="card-img-top" alt="Photo of Julian Sanchez">
+                    <div class="card" style="margin-bottom: 20px" id="about">
+                        <img src="./img/nyona-osum.jfif" class="card-img-top" alt="Photo of Nyona Osum">
                         <div class="card-body">
-                            <h4 class="card-title">Julian Sanchez</h4>
+                            <h4 class="card-title">Nyona Osum</h4>
                             <h5>Class: Research Practicum</h5>
-                            <p class="card-text">Description of Contributions here.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card" id="about">
-                        <img src="" class="card-img-top" alt="Photo of Julian Sanchez">
-                        <div class="card-body">
-                            <h4 class="card-title">Julian Sanchez</h4>
-                            <h5>Class: Research Practicum</h5>
-                            <p class="card-text">Description of Contributions here.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card" id="about">
-                        <img src="" class="card-img-top" alt="Photo of Julian Sanchez">
-                        <div class="card-body">
-                            <h4 class="card-title">Julian Sanchez</h4>
-                            <h5>Class: Research Practicum</h5>
-                            <p class="card-text">Description of Contributions here.</p>
+                            <p class="card-text">Did absolutely nothing.</p>
                         </div>
                     </div>
                 </div>
