--- a/Research Website/index.html
+++ b/Research Website/index.html
@@ -43,7 +43,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-6 p-0 d-flex align-items-center">
-                    <img class="img-fluid" src="./img/research-setup.jpg" alt="Research Setup">
+                    <img class="img-fluid border-color" src="./img/research-setup.jpg" alt="Research Setup">
                 </div>
                 <div class="col-sm-6 p-0 d-flex align-items-center">
                     <div class="container">
@@ -60,7 +60,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-4 p-3">
-                    <img class="img-fluid" src="./img/water-scarcity.jpg" alt="Water Scarcity">
+                    <img class="img-fluid border-color" style="margin-top: 40px" src="./img/water-scarcity.jpg" alt="Water Scarcity">
                 </div>
                 <div class="col-sm-8 p-3">
                     <h1 id="ovPadLeft">Background</h1>
@@ -79,33 +79,21 @@
             <div class="row">
                 <div class="col-sm-8 p-3">
                     <h1 id="ovPadRight">Rationale</h1>
-                    <p class="lead overview-font" id="ovPadRight">The solution proposed involves the use of transpiration. 
-                        Transpiration is the mechanism by which plants release water vapor to serve various purposes including 
-                        excreting waste, heat release, and drawing water up the xylem. Much of this water is “wasted” in trees to 
-                        create enough pressure to conduct the water up through such a tall tube.  A typical tree under typical 
-                        conditions will transpire approximately 90% of the water it draws up. This transpired water has come from
-                         the ground and been filtered through the plant's systems. The transpired water vapor is clean and free of
-                          contaminants due to the tree’s xylem acting as a filter. The use of trees could alleviate the problem because
-                           trees act as natural filters, are already integrated into the ground, and are fairly common around 
-                           the world. This means that the target areas will have access to a supplementary source of water very 
-                           close to where they live. In India, for example, since their water scarcity derives from a lack of 
-                           sanitation, the trees have more water available and thus can transpire more. This means that the device
-                            will be more effective in those areas. However, in areas without large sources of water, trees still 
-                            require water to survive, meaning that the dispersed water in the soil where the trees are drinking from
-                             can be used. The device would be less effective, though, because plants transpire less the less hydrated
-                              the soil is.</p>
+                    <p class="lead overview-font" id="ovPadRight">The purpose of this design project was to design, build, and test a proof-of-concept device that collects water from trees. This device would supplement or replace other insufficient water sources for people in impoverished areas lacking available sanitary water without the cost or safety concerns of other solutions. This device would harness the transpired water that trees transpire out to draw more water up through their trunks. That water is filtered from harmful substances without the need for boiling or filtering through an external device. This device could be better than other solutions (such as infrastructure, wells, rain collection, fog/dew collection, etc.) because of its pre-installed infrastructure. This project’s objective is to provide an inexpensive, temporary, and supplementary water source to those in need of clean water. The target regions are those with available trees to increase the quality of life, education, sanitation, and the economy of developing countries. The solution will be temporary until more permanent fixtures are implemented in the future.</p>
                 </div>
                 <div class="col-sm-4 p-3">
-                    <img class="img-fluid" src="./img/water-scarcity.jpg" alt="Water Scarcity">
+                    <img class="img-fluid  border-color" style="margin-top: 60px" src="./img/Transpiration-pull.png" alt="Transpiration Diagram">
+                    <!--https://www.google.com/url?sa=i&url=https%3A%2F%2Fbyjus.com%2Fbiology%2Ftranspiration-pull%2F&psig=AOvVaw2XHfdSplBVBAOgZrqTvAuL&ust=1664557197341000&source=images&cd=vfe&ved=0CAwQjRxqFwoTCOip4v28uvoCFQAAAAAdAAAAABAU-->
                 </div>
             </div>
             <div class="row">
                 <div class="col-sm-4 p-3">
-                    <img class="img-fluid" src="./img/water-scarcity.jpg" alt="Water Scarcity">
+                    <img class="img-fluid border-color" src="./img/research-practicum-microscopy-art.jpg" alt="Research Practicum Microscopy Art">
+                    <!--https://andor.oxinst.com/complete-microscopy-training-course-->
                 </div>
                 <div class="col-sm-8 p-3">
                     <h1 id="ovPadLeft">Research Practicum</h1>
-                    <p class="lead overview-font" id="ovPadLeft"></p>
+                    <p class="lead overview-font" id="ovPadLeft">Research Practicum is a class designed around practical application of science, mathematical, and data analysis skills to complete a novel research project from start to finish. Students concieve the project in the previous class, <abbr title="Introduction to Research">ITR</abbr>, and execute it in Research Practicum. The finish off the class by writing an original research paper and giving a presentation. Students also have the option to compete in the nearby science fairs.</p>
                 </div>
             </div>
         </div>
