Fixed procedure page
Accordions are now combined, mild editing changes

--- a/Research Website/index.html
+++ b/Research Website/index.html
@@ -42,10 +42,10 @@
     <section class="showcase text-light p-2 text-center">
         <div class="container">
             <div class="row">
-                <div class="col-sm-6 p-0 d-flex align-items-center">
+                <div class="col-lg-6 p-0 d-flex align-items-center">
                     <img class="img-fluid border-color" src="./img/research-setup.jpg" alt="Research Setup">
                 </div>
-                <div class="col-sm-6 p-0 d-flex align-items-center">
+                <div class="col-lg-6 p-0 d-flex align-items-center">
                     <div class="container">
                         <h1 class="display-4">Collecting Water using Transpiration (2021-2022)</h1>
                         <h2>Building a Site with Bootstrap</h2>
@@ -59,10 +59,10 @@
     <section class="overview text-dark p-2 text-left">
         <div class="container">
             <div class="row">
-                <div class="col-sm-4 p-3">
-                    <img class="img-fluid border-color" style="margin-top: 40px" src="./img/water-scarcity.jpg" alt="Water Scarcity">
+                <div class="col-lg-4 p-3 d-flex align-items-center">
+                    <img class="img-fluid border-color" src="./img/water-scarcity.jpg" alt="Water Scarcity">
                 </div>
-                <div class="col-sm-8 p-3">
+                <div class="col-lg-8 p-3">
                     <h1 id="ovPadLeft">Background</h1>
                     <p class="lead overview-font" id="ovPadLeft">Around the world, 2.8 billion people live with water scarcity. 
                         Of those, 1.2 billion people live with water scarcity caused by the physical lack of nearby water sources.
@@ -77,21 +77,21 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-8 p-3">
+                <div class="col-lg-8 p-3">
                     <h1 id="ovPadRight">Rationale</h1>
                     <p class="lead overview-font" id="ovPadRight">The purpose of this design project was to design, build, and test a proof-of-concept device that collects water from trees. This device would supplement or replace other insufficient water sources for people in impoverished areas lacking available sanitary water without the cost or safety concerns of other solutions. This device would harness the transpired water that trees transpire out to draw more water up through their trunks. That water is filtered from harmful substances without the need for boiling or filtering through an external device. This device could be better than other solutions (such as infrastructure, wells, rain collection, fog/dew collection, etc.) because of its pre-installed infrastructure. This project’s objective is to provide an inexpensive, temporary, and supplementary water source to those in need of clean water. The target regions are those with available trees to increase the quality of life, education, sanitation, and the economy of developing countries. The solution will be temporary until more permanent fixtures are implemented in the future.</p>
                 </div>
-                <div class="col-sm-4 p-3">
-                    <img class="img-fluid  border-color" style="margin-top: 60px" src="./img/Transpiration-pull.png" alt="Transpiration Diagram">
+                <div class="col-lg-4 p-3 d-flex align-items-center">
+                    <img class="img-fluid  border-color" src="./img/Transpiration-pull.png" alt="Transpiration Diagram">
                     <!--https://www.google.com/url?sa=i&url=https%3A%2F%2Fbyjus.com%2Fbiology%2Ftranspiration-pull%2F&psig=AOvVaw2XHfdSplBVBAOgZrqTvAuL&ust=1664557197341000&source=images&cd=vfe&ved=0CAwQjRxqFwoTCOip4v28uvoCFQAAAAAdAAAAABAU-->
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-4 p-3">
+                <div class="col-lg-4 p-3 d-flex align-items-center">
                     <img class="img-fluid border-color" src="./img/research-practicum-microscopy-art.jpg" alt="Research Practicum Microscopy Art">
                     <!--https://andor.oxinst.com/complete-microscopy-training-course-->
                 </div>
-                <div class="col-sm-8 p-3">
+                <div class="col-lg-8 p-3">
                     <h1 id="ovPadLeft">Research Practicum</h1>
                     <p class="lead overview-font" id="ovPadLeft">Research Practicum is a class designed around practical application of science, mathematical, and data analysis skills to complete a novel research project from start to finish. Students concieve the project in the previous class, <abbr title="Introduction to Research">ITR</abbr>, and execute it in Research Practicum. The finish off the class by writing an original research paper and giving a presentation. Students also have the option to compete in the nearby science fairs.</p>
                 </div>
