--- a/authors.html
+++ b/authors.html
@@ -8,12 +8,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark nb-bg-color">
         <div class="container-fluid">
-            <a href="/index.html" class="navbar-brand"><img class="w-100" src="/img/Leaf-Water-Drop-PNG-Picture.png" alt="Leaf with Water Droplets"></a>
+            <a href="index.html" class="navbar-brand"><img class="w-100" src="img/Leaf-Water-Drop-PNG-Picture.png" alt="Leaf with Water Droplets"></a>
 
             <!--Hamburger Menu Button-->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
@@ -25,13 +25,13 @@
             <!--Links for hamburger menu button-->
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a href="/authors.html" class="nav-link hover-underline-animation" id="nb-menu-item">Author</a>
+                        <a href="authors.html" class="nav-link hover-underline-animation" id="nb-menu-item">Author</a>
                     </li>
                     <li class="nav-item">
-                        <a href="/procedure.html" class="nav-link hover-underline-animation" id="nb-menu-item">Procedure</a>
+                        <a href="procedure.html" class="nav-link hover-underline-animation" id="nb-menu-item">Procedure</a>
                     </li>
                     <li class="nav-item">
-                        <a href="/results.html" class="nav-link hover-underline-animation" id="nb-menu-item">Results</a>
+                        <a href="results.html" class="nav-link hover-underline-animation" id="nb-menu-item">Results</a>
                     </li>
                 </ul>
             </div>
@@ -49,7 +49,7 @@
             <div class="row row-cols-1 row-cols-md-2 g-4">
                 <div class="col">
                     <div class="card" id="about">
-                        <img src="./img/julian-sanchez.jpg" class="card-img-top" alt="Photo of Julian Sanchez">
+                        <img src="img/julian-sanchez.jpg" class="card-img-top" alt="Photo of Julian Sanchez">
                         <div class="card-body">
                             <h4 class="card-title">Julian Sanchez</h4>
                             <h5>Class: Research Practicum</h5>
@@ -59,7 +59,7 @@
                 </div>
                 <div class="col">
                     <div class="card" style="margin-bottom: 20px" id="about">
-                        <img src="./img/nyona-osum.jfif" class="card-img-top" alt="Photo of Nyona Osum">
+                        <img src="img/nyona-osum.jfif" class="card-img-top" alt="Photo of Nyona Osum">
                         <div class="card-body">
                             <h4 class="card-title">Nyona Osum</h4>
                             <h5>Class: Research Practicum</h5>
