--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark nb-bg-color">
         <div class="container-fluid">
-            <a href="/index.html" class="navbar-brand"><img class="w-100" src="/img/Leaf-Water-Drop-PNG-Picture.png" alt="Leaf with Water Droplets"></a>
+            <a href="index.html" class="navbar-brand"><img class="w-100" src="img/Leaf-Water-Drop-PNG-Picture.png" alt="Leaf with Water Droplets"></a>
 
             <!--Hamburger Menu Button-->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
@@ -25,13 +25,13 @@
             <!--Links for hamburger menu button-->
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a href="/authors.html" class="nav-link hover-underline-animation" id="nb-menu-item">Author</a>
+                        <a href="authors.html" class="nav-link hover-underline-animation" id="nb-menu-item">Author</a>
                     </li>
                     <li class="nav-item">
-                        <a href="/procedure.html" class="nav-link hover-underline-animation" id="nb-menu-item">Procedure</a>
+                        <a href="procedure.html" class="nav-link hover-underline-animation" id="nb-menu-item">Procedure</a>
                     </li>
                     <li class="nav-item">
-                        <a href="/results.html" class="nav-link hover-underline-animation" id="nb-menu-item">Results</a>
+                        <a href="results.html" class="nav-link hover-underline-animation" id="nb-menu-item">Results</a>
                     </li>
                 </ul>
             </div>
@@ -43,7 +43,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 p-0 d-flex align-items-center">
-                    <img class="img-fluid border-color" src="./img/research-setup.jpg" alt="Research Setup">
+                    <img class="img-fluid border-color" src="img/research-setup.jpg" alt="Research Setup">
                 </div>
                 <div class="col-lg-6 p-0 d-flex align-items-center">
                     <div class="container">
@@ -60,7 +60,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 p-3 d-flex align-items-center">
-                    <img class="img-fluid border-color" src="./img/water-scarcity.jpg" alt="Water Scarcity">
+                    <img class="img-fluid border-color" src="img/water-scarcity.jpg" alt="Water Scarcity">
                 </div>
                 <div class="col-lg-8 p-3">
                     <h1 id="ovPadLeft">Background</h1>
@@ -82,13 +82,13 @@
                     <p class="lead overview-font" id="ovPadRight">The purpose of this design project was to design, build, and test a proof-of-concept device that collects water from trees. This device would supplement or replace other insufficient water sources for people in impoverished areas lacking available sanitary water without the cost or safety concerns of other solutions. This device would harness the transpired water that trees transpire out to draw more water up through their trunks. That water is filtered from harmful substances without the need for boiling or filtering through an external device. This device could be better than other solutions (such as infrastructure, wells, rain collection, fog/dew collection, etc.) because of its pre-installed infrastructure. This project’s objective is to provide an inexpensive, temporary, and supplementary water source to those in need of clean water. The target regions are those with available trees to increase the quality of life, education, sanitation, and the economy of developing countries. The solution will be temporary until more permanent fixtures are implemented in the future.</p>
                 </div>
                 <div class="col-lg-4 p-3 d-flex align-items-center">
-                    <img class="img-fluid  border-color" src="./img/Transpiration-pull.png" alt="Transpiration Diagram">
+                    <img class="img-fluid  border-color" src="img/Transpiration-pull.png" alt="Transpiration Diagram">
                     <!--https://www.google.com/url?sa=i&url=https%3A%2F%2Fbyjus.com%2Fbiology%2Ftranspiration-pull%2F&psig=AOvVaw2XHfdSplBVBAOgZrqTvAuL&ust=1664557197341000&source=images&cd=vfe&ved=0CAwQjRxqFwoTCOip4v28uvoCFQAAAAAdAAAAABAU-->
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-4 p-3 d-flex align-items-center">
-                    <img class="img-fluid border-color" src="./img/research-practicum-microscopy-art.jpg" alt="Research Practicum Microscopy Art">
+                    <img class="img-fluid border-color" src="img/research-practicum-microscopy-art.jpg" alt="Research Practicum Microscopy Art">
                     <!--https://andor.oxinst.com/complete-microscopy-training-course-->
                 </div>
                 <div class="col-lg-8 p-3">
