--- a/procedure.html
+++ b/procedure.html
@@ -8,12 +8,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark nb-bg-color">
         <div class="container-fluid">
-            <a href="/index.html" class="navbar-brand"><img class="w-100" src="/img/Leaf-Water-Drop-PNG-Picture.png" alt="Leaf with Water Droplets"></a>
+            <a href="index.html" class="navbar-brand"><img class="w-100" src="img/Leaf-Water-Drop-PNG-Picture.png" alt="Leaf with Water Droplets"></a>
 
             <!--Hamburger Menu Button-->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
@@ -25,13 +25,13 @@
             <!--Links for hamburger menu button-->
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a href="/authors.html" class="nav-link hover-underline-animation" id="nb-menu-item">Author</a>
+                        <a href="authors.html" class="nav-link hover-underline-animation" id="nb-menu-item">Author</a>
                     </li>
                     <li class="nav-item">
-                        <a href="/procedure.html" class="nav-link hover-underline-animation" id="nb-menu-item">Procedure</a>
+                        <a href="procedure.html" class="nav-link hover-underline-animation" id="nb-menu-item">Procedure</a>
                     </li>
                     <li class="nav-item">
-                        <a href="/results.html" class="nav-link hover-underline-animation" id="nb-menu-item">Results</a>
+                        <a href="results.html" class="nav-link hover-underline-animation" id="nb-menu-item">Results</a>
                     </li>
                 </ul>
             </div>
@@ -64,10 +64,10 @@
                               <br>
                               - Make sure that the fan is sucking into the funnel. For the device with the top component, attach 4 short pieces of vinyl tubing to the protrusions, around 2" each. 
                               <hr><br>
-                              <img src="./img/Screenshot 2022-09-29 215127.png" class="w-25">
-                              <img src="./img/Screenshot 2022-09-29 215148.png" class="w-25">
-                              <img src="./img/IMG_20211201_184404249.jpg" class="w-25">
-                              <img src="./img/IMG_20211201_184428278_HDR.jpg" class="w-25">
+                              <img src="img/Screenshot 2022-09-29 215127.png" class="w-25">
+                              <img src="img/Screenshot 2022-09-29 215148.png" class="w-25">
+                              <img src="img/IMG_20211201_184404249.jpg" class="w-25">
+                              <img src="img/IMG_20211201_184428278_HDR.jpg" class="w-25">
                             </div>
                           </div>
                         </div>
