--- a/procedure.html
+++ b/procedure.html
@@ -46,15 +46,15 @@
             <h5 class="text-center">Steps Taken to Complete Project</h5>
             <hr><br> <!--Horizontal line and line break-->
             <div class="container">
-                    <h3>Steps:</h3>
+                    <h2>STEPS:</h2>
                     <div class="accordion" id="accordionExample">
                         <div class="accordion-item">
                           <h2 class="accordion-header" id="headingOne">
-                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                              Prototype
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                              <h3>Prototype</h3>
                             </button>
                           </h2>
-                          <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                          <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                             <div class="accordion-body">
                               - 3D print two bottom components and one top component.
                               <br>
@@ -64,66 +64,76 @@
                               <br>
                               - Make sure that the fan is sucking into the funnel. For the device with the top component, attach 4 short pieces of vinyl tubing to the protrusions, around 2" each. 
                               <hr><br>
-                              <img src="img/Screenshot 2022-09-29 215127.png" class="w-25">
-                              <img src="img/Screenshot 2022-09-29 215148.png" class="w-25">
-                              <img src="img/IMG_20211201_184404249.jpg" class="w-25">
-                              <img src="img/IMG_20211201_184428278_HDR.jpg" class="w-25">
+                              <img src="img/Device-Funnel-CAD.png" class="w-25 border-color">
+                              <img src="img/Device-Top-CAD.png" class="w-25 border-color">
                             </div>
                           </div>
                         </div>
                         <div class="accordion-item">
                           <h2 class="accordion-header" id="headingTwo">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                              Assemble
+                              <h3>Condenser</h3>
                             </button>
                           </h2>
                           <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                             <div class="accordion-body">
-                              
-                              <hr><br>
-                              
-                            </div>
-                          </div>
-                        </div>
-                        <div class="accordion-item">
-                          <h2 class="accordion-header" id="headingThree">
-                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
-                              Measure/Cut
-                            </button>
-                          </h2>
-                          <div id="collapseThree" class="accordion-collapse collapse show" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-                            <div class="accordion-body">
                               - Measure and cut two 42" lengths of 1/4" vinyl tubing.
-                            </div>
-                          </div>
-                        </div>
-                        <div class="accordion-item">
-                          <h2 class="accordion-header" id="headingFour">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                              Drill
-                            </button>
-                          </h2>
-                          <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
-                            <div class="accordion-body">
+                              <br>
                               - Drill two 1/4" holes into a 5-gallon bucket around 5" above the base.
-                            </div>
-                          </div>
-                        </div>
-                        <div class="accordion-item">
-                          <h2 class="accordion-header" id="headingFive">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-                              Assemble
-                            </button>
-                          </h2>
-                          <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
-                            <div class="accordion-body">
+                              <br>
                               - Construct the condenser by using duct tape to affix the vinyl tubing to the sides of the bucket in opposite helical patterns.
                               <br>
                               - Thread the tubing through the drilled holes.
                               <br>
                               - Leave around 12" of tubing per tube off the top.
                               <br>
-                              - Use hot glue to seal the drilled holes with the tubing.
+                              - Use hot glue to seal the drilled holes with the tubing. 
+                              <br>
+                              - Fill the condenser with cold water.
+                              <hr><br>
+                              <img src="img/Condenser.png" class="w-25 border-color">
+                            </div>
+                          </div>
+                        </div>
+                        <div class="accordion-item">
+                          <h2 class="accordion-header" id="headingThree">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                              <h3>Research Setup</h3>
+                            </button>
+                          </h2>
+                          <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                              - Place the setup in an area with windows and natural sunlight.
+                              <br>
+                              - Suspend a grow light over three Green Mountain Boxwood plants.
+                              <br>
+                              - Set the grow light on a timer from 7:00AM to 6:00PM.
+                              <br>
+                              - Connect the condenser tubes to the devices.
+                              <br>
+                              - Suspend the devices in the plants.
+                              <br>
+                              - Connect the devices' power cables to the timer.
+                              <br>
+                              - Position containers under the outlets of the condensers. Cover with plastic wrap to reduce evaporation.
+                              <br>
+                              - Water plants daily.
+                              <hr><br>
+                              <img src="img/Setup.png" class="w-25 border-color">
+                            </div>
+                          </div>
+                        </div>
+                        <div class="accordion-item">
+                          <h2 class="accordion-header" id="headingFour">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                              <h3>Data Collection</h3>
+                            </button>
+                          </h2>
+                          <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                              - Using an eyedropper, record amount of water collected, in milliliters, twice a day, at noon and 6:00PM.
+                              <hr><br>
+                              <img src="img/Collection.jpg" class="w-25 border-color">
                             </div>
                           </div>
                         </div>
