--- a/results.html
+++ b/results.html
@@ -10,6 +10,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js" defer integrity="sha512-ElRFoEQdI5Ht6kZvyzXhYG9NqjtkmlkfYk0wr6wHxU9JEHakS7UJZNeml5ALk+8IKlU6jDgMabC3vkumRokgJA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <link href="style.css" rel="stylesheet">
     <script src="js/lineChart.js" defer></script>
+    <script type = "module" src="js/navbar.js" defer></script>
 </head>
 <body class="blank-bg">
     <nav class="navbar navbar-expand-lg navbar-dark nb-bg-color">
@@ -31,8 +32,15 @@
                     <li class="nav-item">
                         <a href="procedure.html" class="nav-link hover-underline-animation" id="nb-menu-item">Procedure</a>
                     </li>
+                    
                     <li class="nav-item">
                         <a href="results.html" class="nav-link hover-underline-animation" id="nb-menu-item">Results</a>
+                    </li>
+                    <li class="nav-item nbMenuItem">
+                        <a  id="userLink" class="nav-link hover-underline-animation" href="home.html">User Link</a>
+                    </li>
+                    <li class="nav-item nbMenuItem">
+                        <a  id="signInOut" class="nav-link hover-underline-animation" href="">Sign In</a>
                     </li>
                 </ul>
             </div>
