--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="style.css">
+    <script type = "module" src="js/navbar.js" defer></script>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark nb-bg-color">
@@ -32,6 +33,12 @@
                     </li>
                     <li class="nav-item">
                         <a href="results.html" class="nav-link hover-underline-animation" id="nb-menu-item">Results</a>
+                    </li>
+                    <li class="nav-item nbMenuItem">
+                        <a  id="userLink" class="nav-link hover-underline-animation" href="home.html">User Link</a>
+                    </li>
+                    <li class="nav-item nbMenuItem">
+                        <a  id="signInOut" class="nav-link hover-underline-animation" href="">Sign In</a>
                     </li>
                 </ul>
             </div>
