--- a/register.html
+++ b/register.html
@@ -5,13 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Research Website</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <!-- Bootstrap 5 CSS, Icons and custom CSS file links -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="signInStyle.css">
     <link rel="stylesheet" href="style.css">
+
+    <!-- Bootstrap 5, crypto-js and custom JS script tags-->
+    <!-- Include 'defer' keyword for each to improve loading-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" 
+            defer integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" 
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js" 
+            defer integrity="sha512-E8QSvWZ0eCLGk4km3hxSsNmGWbLtSCSUcewDQPQWZF6pEU8GlT8a5fF32wOl1i8ftdMhssTrF/OhyGWwonTcXA==" 
+            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script type = "module" src="js/navbar.js" defer></script>
+    <script type="module" src="js/register.js" defer></script>
 </head>
+
 <body>
+    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark nb-bg-color">
         <div class="container-fluid">
             <a href="index.html" class="navbar-brand"><img class="w-100" src="img/Leaf-Water-Drop-PNG-Picture.png" alt="Leaf with Water Droplets"></a>
@@ -45,38 +60,21 @@
         </div>
     </nav>
 
-    <!--About the Authors-->
-    <section class="author">
-        <div class="container">
-            <br>
-            <h1 class="text-center about-author">About the Authors</h1>
-            <hr><br> <!--Horizontal line and line break-->
+    <div class="container">
+        <br><h2 class="text-center">Account Registration</h2><br>
+    </div>
 
-            <!--Cards Organized in a 2x2 grid-->
-            <div class="row row-cols-1 row-cols-md-2 g-4">
-                <div class="col">
-                    <div class="card" id="about">
-                        <img src="img/julian-sanchez.jpg" class="card-img-top" alt="Photo of Julian Sanchez">
-                        <div class="card-body">
-                            <h4 class="card-title">Julian Sanchez</h4>
-                            <h5>Class: Research Practicum</h5>
-                            <p class="card-text">Built prototypes, executed tests, purchased materials, collected data, wrote research paper, and wrote/preseented the presentation.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card" style="margin-bottom: 20px" id="about">
-                        <img src="img/nyona-osum.jfif" class="card-img-top" alt="Photo of Nyona Osum">
-                        <div class="card-body">
-                            <h4 class="card-title">Nyona Osum</h4>
-                            <h5>Class: Research Practicum</h5>
-                            <p class="card-text">Did absolutely nothing.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+    <!--Sign Up -->
+    <div class="signUpForm mb-5">     
+        <form>
+            <input type="text" placeholder="First Name" id="firstName" class="form-control mb-3">
+            <input type="text" placeholder="Last Name" id="lastName" class="form-control mb-3">
+            <input type="email" placeholder="Email" id="userEmail" class="form-control mb-3">
+            <input type="password" placeholder="password" id="userPass" class="form-control mb-3">
+            <button type = "button" id="submitData" name="submitData" class="btn btn-outline-primary mb-3 w-100">Register</button>
+            <a href="signIn.html" class="badge bg-secondary py-1 w-100">Already have an account?</a>
+        </form>
+    </div>
     
     <!--Footer (Requires BootStrap Icons)-->
     <footer class="p-5 footer text-light text-center position-relative">
@@ -87,8 +85,5 @@
             </a>
         </div>
     </footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
